# zenportal

./: .gitignore  CLAUDE.md  HYDRATE.md  LICENSE  README.md  TEXTUAL_ENHANCEMENTS.md  ZEN_CODE_DESIGN.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: commit-push-down.md  hydrate.md
docs/: ARCHITECTURE.md  ENHANCEMENT_PLAN.md  REACTIVE.md  TEXTUAL_PATTERNS.md
research/: ANALYSIS-ZEN-AGENTS.md  ARCHITECTURE_PROPOSAL.md  DESIGN_EXPLORATION.md  GIT_WORKTREES_ASSESSMENT.md  OPENROUTER_INTEGRATION.md  SECURITY_ANALYSIS.md  TOKEN_DRAINS.md  TUI_PATTERNS.md  WORKTREES_IMPL_PLAN.md
zen_portal/: __init__.py  __main__.py  app.py
zen_portal/commands/: __init__.py  zen_commands.py
zen_portal/models/: __init__.py  events.py  exceptions.py  new_session.py  session.py  template.py
zen_portal/screens/: __init__.py  attach_session.py  base.py  command_palette.py  config_screen.py  exit_modal.py  help.py  insert_modal.py  main.py  main_actions.py  main_templates.py  new_session.py  new_session_lists.py  new_session_modal.py  proxy_dashboard.py  rename_modal.py  template_editor.py  template_picker.py  worktrees.py  zen_prompt.py
zen_portal/services/: __init__.py  banner.py  billing_tracker.py  command_registry.py  config.py  conflict.py  context_parser.py  discovery.py  events.py  fuzzy.py  notification.py  openrouter_models.py  pipeline.py  profile.py  proxy_monitor.py  proxy_validation.py  session_commands.py  session_manager.py  session_persistence.py  session_state.py  state.py  template_manager.py  tmux.py  tmux_async.py  token_parser.py  validation.py  worktree.py  zen_ai.py
zen_portal/styles/: __init__.py  base.py
zen_portal/tests/: __init__.py  conftest.py  test_app.py  test_banner.py  test_config.py  test_events.py  test_file_expansion.py  test_insert_modal.py  test_openrouter_models.py  test_pipelines.py  test_profile.py  test_proxy_validation.py  test_restart.py  test_session_commands.py  test_session_manager.py  test_state.py  test_tmux.py  test_validation.py  test_worktree.py  test_zen_ai.py
zen_portal/widgets/: __init__.py  directory_browser.py  (+13 more)
(+20 files in other folders)
