[project]
name = "zen-portal"
version = "0.3.0"
description = "Multi-session AI assistant manager for Claude Code, Codex, and Gemini CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["claude", "ai", "tui", "textual", "tmux", "codex", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=6.7.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/zen-portal"
Repository = "https://github.com/yourusername/zen-portal"
Issues = "https://github.com/yourusername/zen-portal/issues"

[project.scripts]
zen = "zen_portal.app:main"
zen-portal = "zen_portal.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["zen_portal/tests"]
